--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <h2>MoneyMonitor 💸</h2>
+    <h2> XpensoGraph 📊 </h2>
     <div class="container">
         <!-- Input field for entering expense description -->
         <input type="text" id="desc" placeholder="Expense Description">
