--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense Tracker</title>
+    <title>XpensoGraph 📊</title>
     
     <!-- Link to external CSS file for styling -->
     <link rel="stylesheet" href="style.css">
